# idle-space-empire

./: .dockerignore  .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENCE  README.md  SECURITY.md  cog.toml  docker-compose.yml  taskfile.yml
.devcontainer/: devcontainer.json
.docker/idle-space-empire/: Dockerfile
.docker/idle-space-empire/config/: ise.env.example
.docker/idle-space-empire/entrypoints/: docker-entrypoint  docker-entrypoint-dev
.docker/mocked-mongodb/: docker-compose.yml
.docker/mocked-mongodb/config/: mongodb.env.example
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: generate-release.yml
resources/: pyproject.toml
taskfiles/: .env.example  taskfile-docker_linux.yml  taskfile-docker_windows.yml  taskfile-project_linux.yml  taskfile-project_windows.yml
